Use String.isBlank() instead of trim().isEmpty() to avoid allocating a new string
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>